--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div id='head'>GateStack VideoChat Platform</div>
     <div id='body'>
     <div class="container">
-         <div class='row justify-content-center'>      
+         <div class='row justify-content-around'>      
             <div class="col-10 col-md-6">
               <video id="localVideo" autoplay muted ></video>
             </div>
@@ -28,8 +28,16 @@
     </div>    
     <br />
     <div class="container">
+       <div class='m-4 '>
+         <h4>Instructions to make a connection.</h4>
+         <ul>
+           <li>Click the start button to start local video stream.</li>
+           <li>Add UIN of the other user which is also connected currently to GateStack.</li>
+           <li>On successful creation of connection, click Hang Up to disconnect.</li>
+         </ul>
+       </div>
        <div class="row justify-content-center" id='uin'>
-
+       
        </div>
        <div class="row justify-content-center">
          <input type="number" id='to'>
