--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
         
-    <div id='head'>GateStack VideoChat Platform</div>
+    <div id='head'>VideoChat Platform</div>
     <div id='body'>
     <div class="container">
          <div class='row justify-content-around'>      
